<resources>
    <string name="app_name">InsuCalc</string>
    <string name="calc_value">Insulin Value</string>
    <string name="TBS_Hint">E.g. 8.0</string>
    <string name="ICR_Hint">E.g. 10.0</string>
    <string name="DIA_Hint">E.g. 40.0</string>
    <string name="CV_Hint">E.g. 60.0</string>
    <string name="CBS_Hint">E.g. 7.5</string>
    <string name="calculate_insulin_dose">1. Calculate Insulin Dose </string>
    <string name="simulate">2. Create Graph for calculated dose</string>
    <string name="ITR_Text">Insulin to Carb Ratio</string>
    <string name="CV_Text">Carbohydrate Value</string>
    <string name="DIA_Text">Daily Total Insulin</string>
    <string name="TBS_Text">Target Blood Sugar</string>
    <string name="CBS_Text">Current Blood Sugar</string>
    <string name="calcval_Dummy">00.0</string>
    <string name="units">Units</string>
    <string name="suggested_dose">Suggested Dose</string>
    <string name="disclaimer_text">The information contained herein should NOT be used as a replacement for the advice given by a qualified and licensed medical professional.
This tool is designed for the purpose of ASSISTING a type 1 diabetic with insulin calculations.
This insulin calculator is not 100% accurate.
All information entered by the user is assumed to be correct and accurate.
Please seek the advice of an appropriately trained medical professional for any medical concerns relating to your insulin regime, type 1 diabetes and/or general health.
</string>

    <string name="disclaimer_text_sim">The information contained herein should NOT be used as a replacement for the advice given by a qualified and licensed medical professional.
This tool is designed for the purpose of ASSISTING a type 1 diabetic with insulin calculations.
This simulator is not 100% accurate.
All information entered by the user is assumed to be correct, accurate and realistic.
Please seek the advice of an appropriately trained medical professional for any medical concerns relating to your insulin regime, type 1 diabetes and/or general health.
</string>

    <string name="instruct_text">
        The InsuCalc application is made up of five input fields:
        \n\n
        <b>Target Blood Sugar</b> which accepts any value between 5.0 and 8.0
        \n
        <b>Current Blood Sugar</b> which accepts any value between 2.0 and 22.0
        \n
        <b>Carbohydrate Value</b> which accepts any value between 1.0 and 200.0
        \n
        <b>Insulin to Carbohydrate Ratio</b> which accepts any value between 1.0 and 20.0
        \n
        <b>Daily Total Insulin</b> which accepts any value between 10.0 and 100.0
        \n\n
        And two buttons:
        \n\n
        1. Calculate Insulin Dose (This must be pressed first!)
        \n
        2. Create Graph for calculated dose
    </string>

    <string name="instruct_text_sim">
        This  version of the simulator is made up of five input fields:
        \n\n
        <b>Blood Sugar +1h</b> which accepts any value between 2.0 and 22.0
        \n
        <b>Blood Sugar +2h</b> which accepts any value between 2.0 and 22.0
        \n
        <b>Blood Sugar +3h</b> which accepts any value between 2.0 and 22.0
        \n
        <b>Blood Sugar +4h</b> which accepts any value between 2.0 and 22.0
        \n
        <b>Current Blood Sugar</b> which accepts any value between 2.0 and 22.0
        \n\n
        And two buttons:
        \n\n
        1. Add Data (This must be pressed first!)
        \n
        2. Create Graph
    </string>


    <string name="disclaimer">Disclaimer</string>
    <string name="github"> All relevant documentation and code can be found at
        \n\n
        https://github.com/HaraldPurnell/InsuCalc</string>
    <string name="instructions">Instructions</string>
    <string name="clear_all">Clear All</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_2_create_graph">2. Create Graph</string>
    <string name="_1_add_data">1. Add Data</string>
    <string name="constants">Constants</string>
    <string name="inputs">Inputs</string>
    <string name="insulin_calculator">Insulin Calculator</string>
</resources>
