<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C7E1FF"
    tools:context=".InsuCalc">

    <View
        android:id="@+id/myRectangleView5"
        android:layout_width="291dp"
        android:layout_height="237dp"
        android:layout_marginStart="304dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simulate"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/myRectangleView2"
        android:layout_width="583dp"
        android:layout_height="255dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CBStext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Graph TBI"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView2"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView2"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView2"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/myRectangleView"
        android:layout_width="288dp"
        android:layout_height="569dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView2"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/simulate"
        android:layout_width="287dp"
        android:layout_height="99dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="388dp"
        android:background="@drawable/button"
        android:text="@string/simulate"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalcInsDos"
        app:layout_constraintVertical_bias="0.136" />

    <Button
        android:id="@+id/CalcInsDos"
        android:layout_width="288dp"
        android:layout_height="97dp"
        android:layout_marginStart="304dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="516dp"
        android:background="@drawable/button"
        android:text="@string/calculate_insulin_dose"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView2"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/disclaimer"
        android:layout_width="285dp"
        android:layout_height="43dp"
        android:layout_marginEnd="304dp"
        android:background="#C7E1FF"
        android:text="@string/disclaimer"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/CBS"
        android:layout_width="132dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/CBS_Hint"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/TBS" />

    <EditText
        android:id="@+id/CV"
        android:layout_width="132dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/CV_Hint"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/CBS" />

    <EditText
        android:id="@+id/DIA"
        android:layout_width="132dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/DIA_Hint"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/ICR" />

    <EditText
        android:id="@+id/ICR"
        android:layout_width="132dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/ICR_Hint"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/CV" />

    <EditText
        android:id="@+id/TBS"
        android:layout_width="132dp"
        android:layout_height="40dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/TBS_Hint"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView" />

    <TextView
        android:id="@+id/calcValtext"
        android:layout_width="286dp"
        android:layout_height="49dp"
        android:layout_marginStart="304dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="196dp"
        android:text="@string/suggested_dose"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/inputHeading"
        android:layout_width="246dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="Inputs"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView" />

    <TextView
        android:id="@+id/textUnits"
        android:layout_width="141dp"
        android:layout_height="92dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="64dp"
        android:text="@string/units"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/insuDose"
        app:layout_constraintTop_toBottomOf="@+id/calcValtext"
        app:layout_constraintVertical_bias="0.185" />

    <TextView
        android:id="@+id/insuDose"
        android:layout_width="130dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="59dp"
        android:text="@string/calcval_Dummy"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView5"
        app:layout_constraintTop_toBottomOf="@+id/calcValtext"
        app:layout_constraintVertical_bias="0.183" />

    <TextView
        android:id="@+id/CBStext"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/CBS_Text"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/CBS"
        app:layout_constraintTop_toBottomOf="@+id/TBStext" />

    <TextView
        android:id="@+id/ICRtext"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/ITR_Text"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/ICR"
        app:layout_constraintTop_toBottomOf="@+id/CVtext" />

    <TextView
        android:id="@+id/CVtext"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/CV_Text"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/CV"
        app:layout_constraintTop_toBottomOf="@+id/CBStext" />

    <TextView
        android:id="@+id/DIAtext"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/DIA_Text"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/DIA"
        app:layout_constraintTop_toBottomOf="@+id/ICRtext" />

    <TextView
        android:id="@+id/TBStext"
        android:layout_width="135dp"
        android:layout_height="21dp"
        android:layout_marginTop="92dp"
        android:text="@string/TBS_Text"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/TBS"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="273dp"
        android:layout_height="150dp"
        android:text="TextView"
        tools:layout_editor_absoluteX="312dp"
        tools:layout_editor_absoluteY="732dp" />

</android.support.constraint.ConstraintLayout>