<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C7E1FF"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".Simulator">

    <TextView
        android:id="@+id/test1"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/calcval_Dummy"
        android:textAlignment="center"
        android:textColor="#ACDBFF"
        android:textSize="1sp"
        app:layout_constraintEnd_toEndOf="@+id/graphV2"
        app:layout_constraintTop_toTopOf="@+id/graphV2" />

    <TextView
        android:id="@+id/test2"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/calcval_Dummy"
        android:textAlignment="center"
        android:textColor="#ACDBFF"
        android:textSize="1sp"
        app:layout_constraintEnd_toEndOf="@+id/graphV2"
        app:layout_constraintTop_toTopOf="@+id/graphV2" />

    <TextView
        android:id="@+id/test3"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/calcval_Dummy"
        android:textAlignment="center"
        android:textColor="#ACDBFF"
        android:textSize="1sp"
        app:layout_constraintEnd_toEndOf="@+id/graphV2"
        app:layout_constraintTop_toTopOf="@+id/graphV2" />

    <TextView
        android:id="@+id/test4"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/calcval_Dummy"
        android:textAlignment="center"
        android:textColor="#ACDBFF"
        android:textSize="1sp"
        app:layout_constraintEnd_toEndOf="@+id/graphV2"
        app:layout_constraintTop_toTopOf="@+id/graphV2" />

    <TextView
        android:id="@+id/test5"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/calcval_Dummy"
        android:textAlignment="center"
        android:textColor="#ACDBFF"
        android:textSize="1sp"
        app:layout_constraintEnd_toEndOf="@+id/graphV2"
        app:layout_constraintTop_toTopOf="@+id/graphV2" />

    <View
        android:id="@+id/dataBackground"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rectangle"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/navView"
        app:layout_constraintEnd_toStartOf="@+id/consBack"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphV2"
        app:layout_constraintVertical_bias="0.012" />

    <View
        android:id="@+id/consBack"
        android:layout_width="250dp"
        android:layout_height="229dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphV2" />

    <TextView
        android:id="@+id/bs1hValLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="Blood Sugar +1h"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/dataBackground"
        app:layout_constraintTop_toBottomOf="@+id/Inputs" />

    <EditText
        android:id="@+id/bs1hVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/CBS_Hint"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/dataBackground"
        app:layout_constraintStart_toEndOf="@+id/bs1hValLabel"
        app:layout_constraintTop_toBottomOf="@+id/Inputs" />


    <TextView
        android:id="@+id/bs2hValLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="Blood Sugar +2h"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/dataBackground"
        app:layout_constraintTop_toBottomOf="@+id/bs1hValLabel" />

    <EditText
        android:id="@+id/bs2hVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/CBS_Hint"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/dataBackground"
        app:layout_constraintEnd_toEndOf="@+id/dataBackground"
        app:layout_constraintStart_toEndOf="@+id/bs2hValLabel"
        app:layout_constraintTop_toBottomOf="@+id/bs1hVal"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/bs3hValLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="Blood Sugar +3h"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/dataBackground"
        app:layout_constraintTop_toBottomOf="@+id/bs2hValLabel" />

    <EditText
        android:id="@+id/bs3hVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/CBS_Hint"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/dataBackground"
        app:layout_constraintStart_toEndOf="@+id/bs3hValLabel"
        app:layout_constraintTop_toBottomOf="@+id/bs2hVal" />

    <TextView
        android:id="@+id/bs4hValLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="Blood Sugar +4h"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/dataBackground"
        app:layout_constraintTop_toBottomOf="@+id/bs3hValLabel" />

    <EditText
        android:id="@+id/bs4hVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/CBS_Hint"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/dataBackground"
        app:layout_constraintStart_toEndOf="@+id/bs4hValLabel"
        app:layout_constraintTop_toBottomOf="@+id/bs3hVal" />

    <TextView
        android:id="@+id/Constants"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/constants"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/consBack"
        app:layout_constraintStart_toStartOf="@+id/consBack"
        app:layout_constraintTop_toTopOf="@+id/consBack" />

    <TextView
        android:id="@+id/Inputs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"

        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/inputs"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/dataBackground"
        app:layout_constraintStart_toStartOf="@+id/dataBackground"
        app:layout_constraintTop_toTopOf="@+id/dataBackground" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graphV2"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:seriesColor="#000000" />


    <Button
        android:id="@+id/addData"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/_1_add_data"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/dataBackground"
        app:layout_constraintEnd_toEndOf="@+id/dataBackground"
        app:layout_constraintStart_toStartOf="@+id/dataBackground"
        app:layout_constraintTop_toBottomOf="@+id/bs4hVal" />

    <Button
        android:id="@+id/createGraph"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/_2_create_graph"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/ghLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dataBackground"
        app:layout_constraintTop_toBottomOf="@+id/consBack" />

    <TextView
        android:id="@+id/cbsCons"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="Current Blood Sugar"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/consBack"
        app:layout_constraintTop_toBottomOf="@+id/Constants" />

    <EditText
        android:id="@+id/cbsConsVal"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/CBS_Hint"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/consBack"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cbsCons"
        app:layout_constraintTop_toBottomOf="@+id/Constants" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/navView"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorCustom"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/navIC"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorCustom"
            android:drawableTop="@drawable/ic_insucalc"
            android:fontFamily="sans-serif"
            android:text="Insulin Calculator"
            android:onClick="launchInsuCalc"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/instrSim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/instructions"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/ghLink"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataBackground" />

    <TextView
        android:id="@+id/ghLink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autoLink="web"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/github"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/disclSim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dataBackground" />

    <Button
        android:id="@+id/disclSim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#C7E1FF"
        android:fontFamily="sans-serif"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/disclaimer"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/navView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instrSim"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>